k8s/ingress-controller/istio-ingress-controller/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress-controller-ns
  labels:
    istio-injection: enabled
