k8s/ingress-controller/istio-ingress-controller/app-v2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: nginx-ingress-controller-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
        - name: app-v2
          image: nginx:alpine
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args:
            - echo "APP v2" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-service
  namespace: nginx-ingress-controller-ns
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: app
    version: v2
