k8s/ingress-controller/istio-ingress-controller/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-ingress-controller-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.example.local"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: certificate-secret # must be the same as secret on certificate-secret.yml file
      hosts:
        - "*.example.local"
