k8s/ingress-controller/istio-ingress-controller/app-abtest-virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: webapi-abtest
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - app.example.local
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - headers:
            group:
              exact: beta-test-users
      route:
        - destination:
            host: app-service
            subset: v2
    - route:
        - destination:
            host: app-service
            subset: v1
