k8s/ingress-controller/istio-ingress-controller/app-blue-green-virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-blue-virtual-service
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - app.blue.example.local
  gateways:
    - istio-ingress-gateway
  http:
    - route:
        - destination:
            host: app-service
            subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-green-virtual-service
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - app.green.example.local
  gateways:
    - istio-ingress-gateway
  http:
    - route:
        - destination:
            host: app-service
            subset: v2
