k8s/ingress-controller/istio-ingress-controller/app-canary-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-canary-virtual-service
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - app.canary.example.local
  gateways:
    - istio-ingress-gateway
  http:
    - route:
        - destination:
            host: app-service
            subset: v1
          weight: 50
        - destination:
            host: app-service
            subset: v2
          weight: 50
