k8s/ingress-controller/istio-ingress-controller/app-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-v1-virtual-service
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - "app1.example.local"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: app
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-v2-virtual-service
  namespace: istio-ingress-controller-ns
spec:
  hosts:
    - "app2.example.local"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: app
            subset: v2
